--- a/src/app/pages/hospi-cash/quotes/quotes.html
+++ b/src/app/pages/hospi-cash/quotes/quotes.html
@@ -18,7 +18,7 @@
       <!-- Breadcrumbs -->
       <div class="text-[13px] sm:text-sm text-gray-500 flex flex-wrap items-center gap-0.5 sm:gap-1 md:gap-2 min-w-0">
         <span class="truncate max-w-[220px] xs:max-w-[260px] sm:max-w-none">
-          Hospi Cash Insurance
+          Group Medical Coverage
         </span>
         <span>›</span>
         <span>Personal Details</span>
@@ -51,12 +51,8 @@
     </span>
 
     <!-- Filter Buttons -->
-  <div class="dropdown filter-btn w-full sm:w-auto">
-    <select
-      (change)="onCoverageAmountChange($event)"
-      class="w-full sm:w-auto bg-transparent outline-none"
-      [value]="selectedCoverageAmt ?? ''"
-    >
+   <div class="dropdown filter-btn w-full sm:w-auto">
+  <select (change)="onCoverageAmountChange($event)" class="w-full sm:w-auto bg-transparent outline-none">
     <option value="">Room Rent</option>
 
     <option value="500">₹500</option>
@@ -71,24 +67,6 @@
     <option value="4500">₹4500</option>
     <option value="5000">₹5000</option>
     <option value="7500">₹7500</option>
-  </select>
-</div>
-
-<!-- No. of Days Dropdown -->
-<div class="dropdown filter-btn w-full sm:w-auto">
-  <select
-    (change)="onDaysChange($event)"
-    class="w-full sm:w-auto bg-transparent outline-none"
-    [value]="selectedNoOfDays ?? ''"
-  >
-    <option value="">No. of Days</option>
-    <option value="10">10 Days</option>
-    <option value="15">15 Days</option>
-    <option value="20">20 Days</option>
-    <option value="30">30 Days</option>
-    <option value="60">60 Days</option>
-    <option value="90">90 Days</option>
-    <option value="180">180 Days</option>
   </select>
 </div>
 
