--- a/src/app/pages/personal-accident-cover/quotes/quotes.html
+++ b/src/app/pages/personal-accident-cover/quotes/quotes.html
@@ -169,18 +169,35 @@
                   <p class="font-semibold mt-1">{{ p.cover }}</p>
                 </div>
 
-               
-                
+
+
               </div>
 
               <button
                 class="bg-[#007AAA] hover:bg-[#006988] text-white font-semibold py-2 rounded-md shadow text-sm mb-2">
                 Buy Now {{ p.base }}
               </button>
-              <button *ngIf="p.addon !== 0"
-                class="bg-[#007AAA] hover:bg-[#006988] text-white font-semibold py-2 rounded-md shadow text-xs">
-                Buy Now ( with compulsory add-on) <br> {{ p.addon }}
+              <button *ngIf="p.addonNumber > 0 || p.addonPremiums?.length"
+                class="bg-[#007AAA] hover:bg-[#006988] text-white font-semibold py-2 rounded-md shadow text-xs w-full">
+
+                Buy Now (with compulsory add-on)
+
+                <!-- CASE 1: addon amount exists -->
+                <div *ngIf="p.addonNumber > 0; else showAddonPremiums">
+                  {{ p.addon }}
+                </div>
+
+                <!-- CASE 2: fallback to addonPremiums -->
+                <ng-template #showAddonPremiums>
+                  <div class="mt-1 text-[13px] leading-tight">
+                    <div *ngFor="let pr of p.addonPremiums">
+                      {{ pr.type }} : {{ pr.displayValue }}
+                    </div>
+                  </div>
+                </ng-template>
+
               </button>
+
 
 
               <a *ngIf="p.brochure" [href]="p.brochure" download target="_blank"
